updated service page